isEmpty --> isBlank